@@ -1,5 +1,28 @@
 @import "mixins/if_screen";
 
+// This is also used by .message .popover
+@mixin select_options {
+  background: var(--autocomplete-bg);
+  line-height: 2.2em;
+  border: var(--input-border);
+  border-radius: var(--input-border-radius);
+  box-shadow: inset -1px 1px 3px rgba(0, 0, 0, 0.1), -1px 1px 2px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+
+  a {
+    color: var(--input-color);
+    text-decoration: none;
+    padding: 0em 0.5em;
+    display: block;
+
+    &.is-active,
+    &.on-hover:hover {
+      background: var(--autocomplete-focus-bg);
+      color: var(--autocomplete-focus);
+    }
+  }
+}
+
 @mixin square_text($size) {
   font-size: $size * 0.666667;
   line-height: $size;
